--- a/app/javascript/components/HelloWorld/style.scss
+++ b/app/javascript/components/HelloWorld/style.scss
@@ -1,5 +1,13 @@
 .greeting {
-    color: blue;
+    color: black;
     font-size: 20px;
+    margin: 100px AUTO;
     font-weight: bold;
+    display: flex;
+}
+
+h1 {
+    background: #4ce3fc;
+    padding: 25PX;
+    color: BLACK;
 }
